2003-10-30  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c: (ves_exec_method_with_context)
	we need to lookup internal calls now
	don't free type in CEE_SIZEOF

2003-10-24  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Update after appdomain changes.

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c - set large stack size on HP 64bit

2003-10-02  Bernie Solomon  <bernard@ugsolutions.com>

	* hacks.h - work round HP 64 bit problem with isunordered

2003-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (dump_frame): Avoid crash on frames without a method. Patch
	sam@superduper.net (sam clegg). Fixes #46197.
	(ves_exec_method_with_context): Fix unbox casting.

2003-09-25  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c - reinstate use of mono_marshal_get_delegate_invoke
	for ordering and fix CALLI to handle wrapper. More wrapper handling
	in CALL and LDSTR. Add another string conversion case.

2003-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (ves_exec_method): Fix warning.
	(ves_exec_method_with_context): Fix CGT_UN and CLT_UN. Patch by
	David Waite (mass@akuma.org).

2003-9-24  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c: I broke calling native delegates reinstate
	old code for the moment.

2003-9-22  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c: use mono_marshal_get_delegate_invoke to get delegate 
	invocation order consistent. Fix THROW_EX, fix ip in overflow 
	exceptions.

Fri Sep 12 10:42:08 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c, interp.h: patch from Bernie Solomon <bernard@ugsolutions.com>:
	64 bit/opcodes/exception handling fixes.

2003-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Use mono_field_from_token () in the appropriate places.
	This simplifies the code and also fixes #48051.

2003-08-27  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (main): Fix the order of initialization calls so it maches 